--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 #Ignore all files in specific directories
-C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Debug
-C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Debug_PhaseSplitTable
-C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Debug_PhaseStandard
-C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Release
-C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Release_PhaseSplitTable
-C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Release_PhaseStandard
-C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\eSOLVERToolBox
+C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Debug\
+C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Debug_PhaseSplitTable\
+C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Debug_PhaseStandard\
+C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Release\
+C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Release_PhaseSplitTable\
+C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\_Release_PhaseStandard\
+C:\Users\VincenzoGiacalone\OneDrive - linkmes.it (1)\Link_Source\Link_Emilgrip\eSOLVERToolBox\
 
 # Ignore files from the directories we don't ignore
 *.ico
